--- a/TTD.ipynb
+++ b/TTD.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,9 +55,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 168,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\630039\\Anaconda3\\lib\\site-packages\\pandas\\core\\indexing.py:1745: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  isetter(ilocs[0], value)\n"
+     ]
+    }
+   ],
    "source": [
     "PATH = glob.glob(\"input/*.csv\")[-1]\n",
     "df = pd.read_csv(PATH)\n",
@@ -68,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 218,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,49 +146,375 @@
     "    return df\n",
     "\n",
     "### prepare mapping data\n",
-    "def mapping():\n",
-    "    list_mapping = glob.glob(\"mapping/*.xlsb\")[0:1]\n",
+    "def mapping(df):\n",
+    "    list_mapping = glob.glob(\"mapping/*.xlsb\")[0:2]\n",
     "    for file in list_mapping:\n",
-    "     mapping.append(pd.read_excel(file,engine='pyxlsb',index_col='Account Number',\n",
+    "     mapping = pd.read_excel(file,engine='pyxlsb',\n",
     "                                  usecols=['Customer Number','Account Number','จำนวนวันที่ค้างชำระ','PF/NPF Flag']\n",
-    "                                  ))\n",
-    "     #mapping.rename(columns={\"Customer Number\": \"Customer Number_{file[17:25]}\", \"จำนวนวันที่ค้างชำระ\": \"จำนวนวันที่ค้างชำระ_{file[17:25]}\",\n",
-    "      #                       'PF/NPF Flag':'PF/NPF Flag_{file[17:25]}'},inplace = True)\n",
+    "                                  )\n",
+    "     mapping = mapping.sort_values(by='Customer Number', ascending=False)\n",
+    "     mapping = mapping.drop_duplicates(subset=['Customer Number'], keep ='first')\n",
+    "     mapping.set_index('Customer Number',inplace=True)\n",
     "     print(f\"Read CSV file mapping {file[17:25]} done!\")\n",
-    "    return mapping"
+    "     mapping.rename(columns={\"Account Number\": \"Account Number_{}\".format(file[17:25]),\"Customer Number\": \"Customer Number_{}\".format(file[17:25]),\"จำนวนวันที่ค้างชำระ\": \"DPD_{}\".format(file[17:25]),\n",
+    "                             'PF/NPF Flag':'NPF_FLAG_{}'.format(file[17:25])},inplace = True)\n",
+    "     df = df.merge(mapping,on='Customer Number',how='left')\n",
+    "     print(f\"mapping performance file {file} done!\")\n",
+    "    return df\n",
+    "\n",
+    "\n",
+    "#for backup data\n",
+    "def backup_data(df,fname):\n",
+    "    df.to_csv(backup+fname,encoding='TIS-620',index=False)\n",
+    "    \n",
+    "#for export_csv data\n",
+    "def export_csv(df,fname):\n",
+    "    df.to_csv(output+fname,encoding='TIS-620',index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 215,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Read CSV file mapping 20220131 done!\n",
+      "mapping performance file mapping\\RPISIC01_20220131_ข้อมูลรายตัวสำหรับตรวจสอบ (22 ประเภทธุรกิจ).xlsb done!\n",
+      "Read CSV file mapping 20220228 done!\n",
+      "mapping performance file mapping\\RPISIC01_20220228_ข้อมูลรายตัวสำหรับตรวจสอบ (22 ประเภทธุรกิจ).xlsb done!\n"
+     ]
+    }
+   ],
    "source": [
-    "def mapping_grade(data):\n",
-    "        for file in file_list_grade:\n",
-    "          df = pd.read_csv(file, encoding = \"UTF-8\",low_memory=False)\n",
-    "          mapping = df.loc[:,[\"Account Number\",\"GRADE\"]]\n",
-    "          mapping.rename(columns={\"Account Number\":\"ACC_ID\"},inplace=True)\n",
-    "          mapping.set_index(\"ACC_ID\",inplace=True)\n",
-    "          data = data.merge(mapping,on=\"ACC_ID\",how=\"left\")\n",
-    "          data.rename(columns={\"GRADE\":\"GRADE{}\".format(file[21:28])},inplace=True)\n",
-    "          print(f\"mapping GRADE CSV file {file} done!\")\n",
-    "        return data"
+    "df = import_data()\n",
+    "replace_date(df,'2564','2565')\n",
+    "df = mapping(df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 252,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ชื่อลูกค้า</th>\n",
+       "      <th>ฝ่ายงาน</th>\n",
+       "      <th>Customer Number</th>\n",
+       "      <th>วัตุประสงค์ 2565</th>\n",
+       "      <th>Grade 2565</th>\n",
+       "      <th>Grade 2564</th>\n",
+       "      <th>วันที่ประเมิน 2565</th>\n",
+       "      <th>ประเภท 2565</th>\n",
+       "      <th>Account Number_20220131</th>\n",
+       "      <th>DPD_20220131</th>\n",
+       "      <th>NPF_FLAG_20220131</th>\n",
+       "      <th>Account Number_20220228</th>\n",
+       "      <th>DPD_20220228</th>\n",
+       "      <th>NPF_FLAG_20220228</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>นางมุทิตา มังคลัง และ นายสุรินทร์ มังคลัง</td>\n",
+       "      <td>SMEs 1</td>\n",
+       "      <td>610002906.0</td>\n",
+       "      <td>Credit Review</td>\n",
+       "      <td>sBBB</td>\n",
+       "      <td>18.sB+</td>\n",
+       "      <td>1/4/2565</td>\n",
+       "      <td>S industries</td>\n",
+       "      <td>5.879022e+09</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1_PF</td>\n",
+       "      <td>5.879022e+09</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1_PF</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>หจก.พี.เอส.พี แมนชั่น</td>\n",
+       "      <td>SMEs 1</td>\n",
+       "      <td>710001224.0</td>\n",
+       "      <td>Credit Review</td>\n",
+       "      <td>18.sB+</td>\n",
+       "      <td>18.sB+</td>\n",
+       "      <td>30/5/2565</td>\n",
+       "      <td>S industries</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>บจก.อมานะห์</td>\n",
+       "      <td>SMEs 1</td>\n",
+       "      <td>730008353.0</td>\n",
+       "      <td>Credit Review</td>\n",
+       "      <td>17.sBB</td>\n",
+       "      <td>6.B+</td>\n",
+       "      <td>20/1/2565</td>\n",
+       "      <td>S Commerce</td>\n",
+       "      <td>6.890101e+08</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1_PF</td>\n",
+       "      <td>6.890101e+08</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1_PF</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>นายมนัส มากเลาะเลย์</td>\n",
+       "      <td>SMEs 1</td>\n",
+       "      <td>610000162.0</td>\n",
+       "      <td>Credit Review</td>\n",
+       "      <td>16.sBBB</td>\n",
+       "      <td>16.sBBB</td>\n",
+       "      <td>21/10/2565</td>\n",
+       "      <td>S industries</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>นาย ธวัชชัย ยอดเวียน</td>\n",
+       "      <td>SMEs 1</td>\n",
+       "      <td>520000389.0</td>\n",
+       "      <td>Credit Review</td>\n",
+       "      <td>18.sB+</td>\n",
+       "      <td>18.sB+</td>\n",
+       "      <td>26/10/2565</td>\n",
+       "      <td>S industries</td>\n",
+       "      <td>5.876000e+09</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1_PF</td>\n",
+       "      <td>5.876000e+09</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1_PF</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1326</th>\n",
+       "      <td>บ ทาคาว่า ออกแบบและก่อสร้าง</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>680006732.0</td>\n",
+       "      <td>Credit Review</td>\n",
+       "      <td>21.sC+</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>9/2/2565</td>\n",
+       "      <td>S industries</td>\n",
+       "      <td>5.390103e+08</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1_PF</td>\n",
+       "      <td>5.390058e+08</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>1_PF</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1327</th>\n",
+       "      <td>นายศิริพงษ์ สีฟอง น.ส.ตรีดาว ศิริศักดา</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>750745684.0</td>\n",
+       "      <td>Credit Review</td>\n",
+       "      <td>22.sDDD</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>12/7/2565</td>\n",
+       "      <td>S industries</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1328</th>\n",
+       "      <td>นายวิรัตน์ นางมรกต บัวมหะกุล</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>750613908.0</td>\n",
+       "      <td>Credit Review</td>\n",
+       "      <td>19.sCCC</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>12/6/2565</td>\n",
+       "      <td>S industries</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1329</th>\n",
+       "      <td>นางดารา นายเสรี มะลูลีม</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>750740671.0</td>\n",
+       "      <td>Credit Review</td>\n",
+       "      <td>21.sC+</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>14/12/2565</td>\n",
+       "      <td>S industries</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1330</th>\n",
+       "      <td>นางสมศรี และ น.ส.รางทอง ไพจิตร</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>750589526.0</td>\n",
+       "      <td>พิจารณาสินเชื่อ</td>\n",
+       "      <td>20.sCC</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>19/12/2565</td>\n",
+       "      <td>S industries</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1331 rows × 14 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                     ชื่อลูกค้า ฝ่ายงาน  Customer Number  \\\n",
+       "0     นางมุทิตา มังคลัง และ นายสุรินทร์ มังคลัง  SMEs 1      610002906.0   \n",
+       "1                         หจก.พี.เอส.พี แมนชั่น  SMEs 1      710001224.0   \n",
+       "2                                   บจก.อมานะห์  SMEs 1      730008353.0   \n",
+       "3                           นายมนัส มากเลาะเลย์  SMEs 1      610000162.0   \n",
+       "4      นาย ธวัชชัย ยอดเวียน                      SMEs 1      520000389.0   \n",
+       "...                                         ...     ...              ...   \n",
+       "1326                บ ทาคาว่า ออกแบบและก่อสร้าง     NaN      680006732.0   \n",
+       "1327     นายศิริพงษ์ สีฟอง น.ส.ตรีดาว ศิริศักดา     NaN      750745684.0   \n",
+       "1328               นายวิรัตน์ นางมรกต บัวมหะกุล     NaN      750613908.0   \n",
+       "1329                    นางดารา นายเสรี มะลูลีม     NaN      750740671.0   \n",
+       "1330             นางสมศรี และ น.ส.รางทอง ไพจิตร     NaN      750589526.0   \n",
+       "\n",
+       "     วัตุประสงค์ 2565 Grade 2565 Grade 2564 วันที่ประเมิน 2565    ประเภท 2565  \\\n",
+       "0       Credit Review       sBBB     18.sB+           1/4/2565   S industries   \n",
+       "1       Credit Review     18.sB+     18.sB+          30/5/2565   S industries   \n",
+       "2       Credit Review     17.sBB       6.B+          20/1/2565     S Commerce   \n",
+       "3       Credit Review    16.sBBB    16.sBBB         21/10/2565   S industries   \n",
+       "4       Credit Review     18.sB+     18.sB+         26/10/2565   S industries   \n",
+       "...               ...        ...        ...                ...            ...   \n",
+       "1326    Credit Review     21.sC+        NaN           9/2/2565   S industries   \n",
+       "1327    Credit Review    22.sDDD        NaN          12/7/2565   S industries   \n",
+       "1328    Credit Review    19.sCCC        NaN          12/6/2565   S industries   \n",
+       "1329    Credit Review     21.sC+        NaN         14/12/2565   S industries   \n",
+       "1330  พิจารณาสินเชื่อ     20.sCC        NaN         19/12/2565   S industries   \n",
+       "\n",
+       "      Account Number_20220131  DPD_20220131 NPF_FLAG_20220131  \\\n",
+       "0                5.879022e+09           0.0              1_PF   \n",
+       "1                         NaN           NaN               NaN   \n",
+       "2                6.890101e+08           0.0              1_PF   \n",
+       "3                         NaN           NaN               NaN   \n",
+       "4                5.876000e+09           0.0              1_PF   \n",
+       "...                       ...           ...               ...   \n",
+       "1326             5.390103e+08           0.0              1_PF   \n",
+       "1327                      NaN           NaN               NaN   \n",
+       "1328                      NaN           NaN               NaN   \n",
+       "1329                      NaN           NaN               NaN   \n",
+       "1330                      NaN           NaN               NaN   \n",
+       "\n",
+       "      Account Number_20220228  DPD_20220228 NPF_FLAG_20220228  \n",
+       "0                5.879022e+09           0.0              1_PF  \n",
+       "1                         NaN           NaN               NaN  \n",
+       "2                6.890101e+08           0.0              1_PF  \n",
+       "3                         NaN           NaN               NaN  \n",
+       "4                5.876000e+09           0.0              1_PF  \n",
+       "...                       ...           ...               ...  \n",
+       "1326             5.390058e+08          28.0              1_PF  \n",
+       "1327                      NaN           NaN               NaN  \n",
+       "1328                      NaN           NaN               NaN  \n",
+       "1329                      NaN           NaN               NaN  \n",
+       "1330                      NaN           NaN               NaN  \n",
+       "\n",
+       "[1331 rows x 14 columns]"
+      ]
+     },
+     "execution_count": 252,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "list_mapping = glob.glob(\"mapping/*.xlsb\")[0:2]\n",
-    "mapping = []\n",
-    "for file in list_mapping:\n",
-    "     mapping.append(pd.read_excel(file,engine='pyxlsb',index_col='Account Number',\n",
-    "                                  usecols=['Customer Number','Account Number','จำนวนวันที่ค้างชำระ','PF/NPF Flag']\n",
-    "                                  ))\n",
-    "pd.merge(mapping)"
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 251,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([False, False, False, False, False, False, False, False, False,\n",
+       "        True, False, False,  True, False])"
+      ]
+     },
+     "execution_count": 251,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns.str.contains(r'DPD')\n",
+    "    \n",
+    "  "
    ]
   }
  ],
