--- a/TTD.ipynb
+++ b/TTD.ipynb
@@ -512,9 +512,7 @@
     }
    ],
    "source": [
-    "df.columns.str.contains(r'DPD')\n",
-    "    \n",
-    "  "
+    "df.columns.str.contains(r'DPD')"
    ]
   }
  ],
